# mamba2-jax-pallas

./: README.md  pyproject.toml  requirements.txt
benchmarks/: bench_model_forward.py
scripts/: load_and_generate.py  load_nemotron.py
src/mamba2_jax/: __init__.py
src/mamba2_jax/distributed/: __init__.py  tensor_parallel.py
src/mamba2_jax/kernels/: __init__.py  bmm_chunk_fwd.py  chunk_cumsum_fwd.py  chunk_scan_fwd.py  chunk_state_fwd.py  ssd_combined.py  state_passing_fwd.py
src/mamba2_jax/models/: __init__.py  mamba2_lm.py  nemotron_h.py
src/mamba2_jax/modules/: __init__.py  mamba2.py
src/mamba2_jax/ops/: __init__.py  causal_conv1d.py  rms_norm.py  selective_state_update.py  ssd_naive.py
tests/: test_chunk_cumsum_and_state.py  test_chunk_scan_and_varlen.py  test_mamba2_ops.py  test_mamba2_vs_torch.py  test_ssd_combined.py  test_state_passing_and_bmm.py
