[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba2-jax"
version = "0.1.0"
description = "Mamba2 SSM in JAX with Pallas Mosaic GPU kernels for NVIDIA Hopper GPUs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy",
    "flax>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
